Implemented  config backup/restore and app clean.
